Mudanças para deixar o jogo mais responsivo

--- a/phaser_game/index.html
+++ b/phaser_game/index.html
@@ -1,11 +1,23 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <style>
+        body {
+            margin: 0;
+            padding: 0;
+            background-color: #000;
+        }
+        #game-container {
+            width: 100vw;
+            height: 100vh;
+        }
+    </style>
     <meta charset="utf-8">
     <title>Jogo da Coleta Seletiva</title>
     <script src="node_modules/phaser/dist/phaser.min.js"></script>
 </head>
 <body>
+    <div id="game-container"></div>
     <script type="module" src="src/main.js"></script>
 </body>
 </html>
