Conserto de um bug de tela

--- a/phaser_game/index.html
+++ b/phaser_game/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
     <title>Jogo da Coleta Seletiva</title>
     <script src="node_modules/phaser/dist/phaser.min.js"></script>
     <style>
@@ -78,7 +78,7 @@
         }
 
         /* Responsividade para telas menores */
-        @media (max-width: 1024px) {
+        /* @media (max-width: 1024px) {
 
             .instructions-panel {
                 max-height: 300px;
@@ -130,7 +130,7 @@
             .instruction-item h3 {
                 font-size: 12px;
             }
-        }
+        } */
     </style>
 </head>
 <body>
