--- a/phaser_game/index.html
+++ b/phaser_game/index.html
@@ -28,6 +28,7 @@
             border-radius: 10px;
             padding: 20px;
             overflow-y: auto;
+            max-width: 300px;
             max-height: 640px;
             box-shadow: 0 10px 30px rgba(0, 0, 0, 0.2);
         }
